--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,7 @@
     <script src="js/stats.js"></script>
     <script src="js/josh.js"></script>
     <script src="js/ConvexGeometry.js"></script>
+    <script src="js/ThreeBSP.js"></script>
 
     <script>
       // the example I made up
