Get tachikoma up to date with d0a381f

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,11 +36,12 @@
       </div>
     </div>
 
-    <script src="js/three.r71.js"></script>
-    <script src="js/stats.js"></script>
-    <script src="js/josh.js"></script>
-    <script src="js/ConvexGeometry.js"></script>
-    <script src="js/ThreeBSP.js"></script>
+    <script type="text/javascript" src="js/three.r71.js"></script>
+    <script type="text/javascript" src="js/stats.js"></script>
+    <script type="text/javascript" src="js/josh.js"></script>
+    <script type="text/javascript" src="js/ConvexGeometry.js"></script>
+    <script type="text/javascript" src="js/ThreeBSP.js"></script>
+    <script type="text/javascript" src="js/SubdivisionModifier.js"></script>
 
     <script>
       // the example I made up
