--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,18 @@
         margin:   0px;
         padding:  0px;
       }
+
       .threejsContainer .stats {
         position: absolute;
+        top:      0px;
         left:     0px;
+        margin:   0px;
+        padding:  0px;
+      }
+
+      .threejsContainer .controls {
+        position: absolute;
+        top:      0px;
         right:    0px;
         margin:   0px;
         padding:  0px;
@@ -32,8 +41,8 @@
     </div>
 
     <div id="tachikoma" class="threejsContainer">
-      <div class="stats">
-      </div>
+      <div class="stats"></div>
+      <div class="controls"></div>
     </div>
 
     <script type="text/javascript" src="js/three.r71.js"></script>
@@ -42,6 +51,7 @@
     <script type="text/javascript" src="js/ConvexGeometry.js"></script>
     <script type="text/javascript" src="js/ThreeBSP.js"></script>
     <script type="text/javascript" src="js/SubdivisionModifier.js"></script>
+    <script type="text/javascript" src="js/dat.gui.js"></script>
 
     <script>
       // the example I made up
