--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,8 +29,19 @@
     <script type="text/javascript" src="js/ThreeBSP.js"></script>
     <script type="text/javascript" src="js/SubdivisionModifier.js"></script>
     <script type="text/javascript" src="js/dat.gui.js"></script>
+    <script type="text/javascript" src="js/ruby.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-git2.min.js"></script>
 
     <script>
+      // Fuck you, HTTP
+      var ast = {"type":"send","target":{"type":"integer","value":"1","location":{"filename":"(eval)","begin":0,"end":1}},"message":"a","args":[],"location":{"filename":"(eval)","begin":0,"end":3}}
+
+      // interpreter
+      var ruby = require("ruby")
+      var vm   = ruby.VM.bootstrap(ast)
+      console.log(vm.world)
+
+      // frontend
       var div         = document.getElementById("ruby-display")
       var width       = div.offsetWidth
       var height      = div.offsetHeight
@@ -41,7 +52,7 @@
         if(div.offsetWidth  !== width)  displayRuby.updateWidth(width=div.offsetWidth)
         if(div.offsetHeight !== height) displayRuby.updateHeight(height=div.offsetHeight)
 
-        displayRuby.update(div.offsetWidth, div.offsetHeight)
+        displayRuby.update(div.offsetWidth, div.offsetHeight, vm.world)
         requestAnimationFrame(renderRuby)
       }
 
